--- a/css/style.css
+++ b/css/style.css
@@ -102,13 +102,14 @@ color: var(--main-black);
   height:100vh;
 }
 .card{
-  padding: 3em 2em;
+  padding: 40px;
   border: 1px solid #ffffff41;
   border-radius: 20px;
   background: linear-gradient(256.72deg, rgba(180, 124, 86, 0.078) 8.42%, rgba(195, 219, 139, 0.152) 80.85%);
   box-shadow: 0px 4px 20px rgba(73, 73, 73, 0.144);
   transform-style: preserve-3d;
   transform: perspective(1000px);
+  max-width: 90%;
 }
 .card-contents{
   transform: translateZ(60px);
@@ -121,7 +122,7 @@ h1{
   font-family: Poppins;
 font-style: normal;
 font-weight: bold;
-font-size: 4.6rem;
+font-size: 4rem;
 line-height:1.2em;
 text-align: center;
 color: var(--main-black);
